--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,9 @@
 
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
+    id 'java'
     id 'application'
+    id 'jacoco'
 }
 
 repositories {
@@ -22,6 +24,9 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation 'org.json:json:20210307'
+    testImplementation 'org.mockito:mockito-core:4.0.0'
 }
 
 application {
@@ -36,4 +41,16 @@ tasks.named('test') {
 
 run {
     standardInput = System.in
+}
+test {
+    useJUnitPlatform()
+    test.finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+    dependsOn test
+}
+
+jacoco {
+    toolVersion = "0.8.10"
 }
