--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClass = 'Steph_Lab17_Group2_A2.App'
+    mainClass.set = 'Steph_Lab17_Group2_A2.App'
 }
 
 tasks.named('test') {
